--- a/TABLE.html
+++ b/TABLE.html
@@ -14,7 +14,7 @@
 		<nav class="navbar clearfix">
 			<div class="float-start">
 				<a href="#" class="navbar-brand">
-					<img src="C:\Users\carbo\OneDrive\Documents\images\Ace-of-Spades-Canvas_4_600x.jpg" alt="ace of spades" style="width:50px;" class="rounded-pill">
+					<img src="https://github.com/Blank2223/image/blob/main/images/Ace-of-Spades-Canvas_4_600x.jpg" alt="ace of spades" style="width:50px;" class="rounded-pill">
 				</a>
 
 				<ul class="collapse navbar-nav " id="nav">
@@ -35,8 +35,8 @@
 				</ul>
 			</div>
 			<div>
-				<img src="C:\Users\carbo\OneDrive\Documents\images\15l_armand_de_brignac_ace_of_spades_gold_brut_1541703600_69487de8_progressive.jpg" alt="ace beer" class="rounded-circle" style="width:60px;">
-				<img src="C:\Users\carbo\OneDrive\Documents\images\ACE-OF-SPADES.jpg " alt="ace show" class="rounded-1 ms-2" style="width:30px;">
+				<img src="https://github.com/Blank2223/image/blob/main/images/15l_armand_de_brignac_ace_of_spades_gold_brut_1541703600_69487de8_progressive.jpg" alt="ace beer" class="rounded-circle" style="width:60px;">
+				<img src="https://github.com/Blank2223/image/blob/main/images/ACE-OF-SPADES.jpg" alt="ace show" class="rounded-1 ms-2" style="width:30px;">
 			</div>
 			<div class="float-end">
 		        <a href="#" class="btn navbar-toggler" data-bs-toggle="collapse" data-bs-target="#nav"><span class="navbar-toggler-icon"></span></a>
