--- a/course.html
+++ b/course.html
@@ -37,7 +37,7 @@
 				<button class="btn btn-primary text-capitalize">start the enrollment</button>
 			</div>
 			<div class="col clearfix">
-				<img src="C:\Users\carbo\OneDrive\Documents\images\EKC1nN.jpg" alt="boy computer" class="float-start rounded" style="width:50%;"><nav class="float-end">
+				<img src="https://github.com/Blank2223/image/blob/main/images/EKC1nN.jpg" alt="boy computer" class="float-start rounded" style="width:50%;"><nav class="float-end">
 					<button class="btn navbar-toggler" data-bs-toggle="collapse" data-bs-target="#all"><span class="glyphicon" style="color:#00f;font-size: 48px;"> &#xe236;</span></button>
 					<ul class="nav flex-column collapse" id="all">
 						<li class="nav-item"><a href="#home" class="nav-link">Home</a></li>
@@ -85,7 +85,7 @@
 
 		<div class="content row mb-3">
 			<div class="col img">
-				<img src="C:\Users\carbo\OneDrive\Documents\images\1_esOa9npMi79rC50Ds3nR1g.png" alt="web image" style="width:100%">
+				<img src="https://github.com/Blank2223/image/blob/main/images/1_esOa9npMi79rC50Ds3nR1g.png" alt="web image" style="width:100%">
 			</div>
 			<div class="col words">
 				<h3 class="text-capitalize ">learn the fundamentals</h3>
@@ -107,7 +107,7 @@
 				<a href="#" class="text-decoration-none btn text-capitalize btn-light p-0">&gt read more</a>
 			</div>
 			<div class="col react-image">
-				<img src="C:\Users\carbo\OneDrive\Documents\images\reactlogo.png" alt="reactphoto" style="width:100%; height:90%; border: 1px solid black;" class="rounded">
+				<img src="https://github.com/Blank2223/image/blob/main/images/reactlogo.png" alt="reactphoto" style="width:100%; height:90%; border: 1px solid black;" class="rounded">
 			</div>
 		</div>
 
@@ -153,7 +153,7 @@
 			</div>
 			
 			<aside class="col p-1" >
-				<img src="C:\Users\carbo\OneDrive\Documents\images\Googlemap-600x551-1.jpg" alt="map" style="width:100%;height:85%;" class="rounded-2 mt-3">
+				<img src="https://github.com/Blank2223/image/blob/main/images/Googlemap-600x551-1.jpg" alt="map" style="width:100%;height:85%;" class="rounded-2 mt-3">
 			</aside>
 		</div>
 		<div class="text-center container-fluid" style="background-color:#000;">
